--- a/src/app/components/alert/alert.component.html
+++ b/src/app/components/alert/alert.component.html
@@ -1,3 +1,13 @@
-<span>Tem certeza que deseja ir para a tela ?</span>
-<button mat-button (click)="dialogRef.close()">NÃO</button>
-<button mat-button (click)="dialogRef.close()">SIM</button>
+<div class="container">
+  <div class="container__message-container">
+    <span>Tem certeza que deseja ir para a tela ?</span>
+  </div>
+  <div class="container__buttons-row">
+    <div class="container__buttons-row__button-wrapper">
+      <button (click)="dialogRef.close()">NÃO</button>
+    </div>
+    <div class="container__buttons-row__button-wrapper">
+      <button (click)="dialogRef.close()">SIM</button>
+    </div>
+  </div>
+</div>
