--- a/src/app/components/expandable-cards/expandable-cards.component.html
+++ b/src/app/components/expandable-cards/expandable-cards.component.html
@@ -1,5 +1,5 @@
-<mat-accordion>
-  <mat-expansion-panel>
+<mat-accordion >
+  <mat-expansion-panel class="container">
     <mat-expansion-panel-header>
       <mat-panel-title>
         {{ product?.businessName }}
@@ -8,9 +8,13 @@
         {{ product?.productName }}
       </mat-panel-description>
     </mat-expansion-panel-header>
-    <div>
-      <span>{{product?.productDescription}}</span>
-      <button mat-button (click)="openDialog()">VER MAIS</button>
+    <div class="container__description-container">
+      <div class="container__description-container__text-container">
+        <span>{{product?.productDescription}}</span>
+      </div>
+      <div>
+        <button class="container__description-container__button" (click)="openDialog()">VER MAIS</button>
+      </div>
     </div>
   </mat-expansion-panel>
 </mat-accordion>
