--- a/src/app/components/results/results.component.html
+++ b/src/app/components/results/results.component.html
@@ -1,6 +1,18 @@
-<div *ngFor="let product of products">
-  <app-expandable-cards
-    [product]="product"
-  >
-  </app-expandable-cards>
+<div class="no-results-container" *ngIf="products.length === 0">
+  <div class="no-results-container__image-container"></div>
+  <div style="no-results-container__text-wrapper">
+    <span>Você ainda não realizou</span>
+  </div>
+  <div style="text-wrapper">
+    <span>nenhuma busca!</span>
+  </div>
+</div>
+
+<div class="cards-container">
+  <div *ngFor="let product of products">
+    <app-expandable-cards
+      [product]="product"
+    >
+    </app-expandable-cards>
+  </div>
 </div>
