--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -1,4 +1,5 @@
 @import '../../../assets/metrics.scss';
+@import '../../../assets/responsive.mixin.scss';
 
 .container-top {
   display: flex;
@@ -9,12 +10,18 @@
   padding-top: $five-fold-pixel;
 
   .container-top__logo {
-    width: 10vw;
     display: flex;
+    width: 10vw;
     height: 3vw;
+    @include phone {
+      width: 50vw;
+      height: 15vw;
+      background-color: yellow;
+    }
     background-image: url('../../../assets/logo.png');
     background-position: center top;
-    background-size: 100% auto;
+    background-size: contain;
+    background-repeat: no-repeat;
     margin-bottom: $five-fold-pixel;
   }
 
