--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -13,10 +13,9 @@
     display: flex;
     width: 10vw;
     height: 3vw;
-    @include phone {
-      width: 50vw;
+    @include phone{
+      width: 20vw;
       height: 15vw;
-      background-color: yellow;
     }
     background-image: url('../../../assets/logo.png');
     background-position: center top;
@@ -27,6 +26,9 @@
 
   .container-top__input {
     width: 30vw;
+    @include phone{
+      width: 80vw;
+    }
     margin-bottom: $five-fold-pixel;
   }
 }
@@ -37,9 +39,9 @@
   justify-content: end;
   background-image: linear-gradient(to right,#517DE0, #2744DD);
   position: relative;
-}
 
-.wave {
-  position: absolute;
-  top: 10px;
+  .container-bottom__wave {
+    position: absolute;
+    top: 10px;
+  }
 }
