--- a/src/app/components/expandable-cards/expandable-cards.component.html
+++ b/src/app/components/expandable-cards/expandable-cards.component.html
@@ -7,14 +7,14 @@
       <mat-panel-description>
         {{ product?.productName }}
       </mat-panel-description>
-      <span>{{open? 'Ocultar detalhe da ação': 'Ver detalhe da ação'}}</span>
+      <span class="container__open-text">{{open? 'Ocultar detalhe da ação': 'Ver detalhe da ação'}}</span>
     </mat-expansion-panel-header>
     <div class="container__description-container">
       <div class="container__description-container__text-container">
         <span>{{product?.productDescription}}</span>
       </div>
-      <div>
-        <button class="container__description-container__button" (click)="openDialog()">VER MAIS</button>
+      <div class="container__description-container__button-container">
+        <button class="container__description-container__button-container__button" (click)="openDialog()">VER MAIS</button>
       </div>
     </div>
   </mat-expansion-panel>
