fixes scroll bug removes unnecessary code

--- a/src/app/components/expandable-cards/expandable-cards.component.scss
+++ b/src/app/components/expandable-cards/expandable-cards.component.scss
@@ -19,7 +19,7 @@
     @include phone{
       flex-direction: column;
     }
-    padding: $double-pixel $triple-pixel;
+    //padding: $double-pixel $triple-pixel;
 
     .container__description-container__text-container {
       width: 70%;
