--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   background-image: linear-gradient(to right,#517DE0, #2744DD);
   padding-top: $five-fold-pixel;
 
