--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,7 +38,7 @@ body {
   margin: 0;
   padding: 0;
 }
-html, body { height: 100%; }
+html, body { height: 100%; width: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 $pixel: 8px;
