--- a/src/app/components/expandable-cards/expandable-cards.component.html
+++ b/src/app/components/expandable-cards/expandable-cards.component.html
@@ -3,6 +3,7 @@
     <mat-expansion-panel-header>
       <mat-panel-title>
         {{ product?.businessName }}
+        <div>testando</div>
       </mat-panel-title>
       <mat-panel-description>
         {{ product?.productName }}
