fixes top container width on chrome

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,6 +44,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 $pixel: 8px;
 
 body{
+  //background: #FAFAFA !important;
   background: #FAFAFA !important;
   .mat-form-field-flex {
     background: white !important;
