--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-  <app-search></app-search>
+  <app-search class="container__search"></app-search>
   <app-results></app-results>
 </div>
