--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -2,14 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-width: 100%;
+  width: 100%;
   height: 100vh;
-
-  .container__subcontainer--half {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 50%;
-    //background-color: coral;
+  .container__search {
+    width: 100%;
   }
 }
