new font colors and icons

--- a/src/app/components/alert/alert.component.scss
+++ b/src/app/components/alert/alert.component.scss
@@ -9,6 +9,7 @@
   .container__message-container {
     padding-bottom: $triple-pixel;
     text-align: center;
+    color: $regular-font;
   }
 
   .container__buttons-row {
