--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,9 +44,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 $pixel: 8px;
 
 body{
-  //background: #FAFAFA !important;
   background: #FAFAFA !important;
   .mat-form-field-flex {
     background: white !important;
+    padding: 0 .75em 0 .75em !important;
   }
 }
